tests/paczka1/fuzzy1/43363164.err
Error in line 1: w5Ot A822 92,3
Error in line 5: w5Ot S240 89,5
Error in line 9: S907 S907 67,8
Error in line 36: RNAomyzl S907 42,9
